<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#4d464b"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="364dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:text="@string/HomeHeader"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#e2dbdb"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/AdventureAwaits"
        android:layout_width="250dp"
        android:layout_height="166dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@string/HomePagePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/aphoto" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="238dp"
        android:layout_height="42dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Question1"
        android:textAlignment="center"
        android:textColor="#e2dbdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AdventureAwaits" />

    <Spinner
        android:id="@+id/WhoWithOption"
        android:layout_width="128dp"
        android:layout_height="37dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="148dp"
        android:background="#e2dbdb"
        android:gravity="center_horizontal"
        android:textColor="#e2dbdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/FindDateBtn"
        android:layout_width="222dp"
        android:layout_height="77dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="144dp"
        android:text="@string/FindDate"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhoWithOption" />

    <TextView
        android:id="@+id/FriendsText"
        android:layout_width="251dp"
        android:layout_height="77dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="14dp"
        android:text="@string/Question2"
        android:textAlignment="center"
        android:textColor="#e2dbdb"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhoWithOption" />

    <Spinner
        android:id="@+id/HowMany"
        android:layout_width="45dp"
        android:layout_height="37dp"
        android:layout_marginStart="142dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="148dp"
        android:background="#e2dbdb"
        android:textAlignment="center"
        android:textColor="#e2dbdb"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhoWithOption" />

    <Button
        android:id="@+id/FriendEventBtn"
        android:layout_width="296dp"
        android:layout_height="77dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="98dp"
        android:visibility="invisible"
        android:text="@string/FindEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HowMany" />

    <Button
        android:id="@+id/HistoryBtn"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="95dp"
        android:text="@string/HistoryBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WhoWithOption" />

</android.support.constraint.ConstraintLayout>